add css files for build

--- a/app/index.html
+++ b/app/index.html
@@ -5,25 +5,13 @@
     <title>echarts theme builder</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <!-- build:css styles/vendor.css -->
-    <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap-colorpicker/dist/css/bootstrap-colorpicker.css" />
-    <!-- endbower -->
-    <!-- endbuild -->
+    <link rel="stylesheet" href="vendors/bootstrap-colorpicker.min.css" />
 
-    <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
   </head>
   <body>
-    <!--[if lt IE 10]>
-        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
     <div>
-
       <div class="container-fluid navbar-default">
         <div class="navbar-header">
           <button type="button" data-toggle="collapse" data-target="#echarts-navbar-collapse" aria-expanded="false" class="navbar-toggle collapsed">
@@ -508,8 +496,6 @@
     <script src="vendors/vue.min.js"></script>
     <script src="vendors/echarts.min.js"></script>
 
-    <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
-    <!-- endbuild -->
   </body>
 </html>
